# Bender_skills

./: .gitignore  GUIA.md  README.md  SIMPLE_GUIDE.md  SKILLS_GUIDE.md  package.xml  setup.py
demo/: demo_complete_modular.py  demo_modular_navigation.py  demo_skills_complete.py  ejemplo.py  test_modules.py
navegation/: __init__.py  advNav.py  advanced_navigation.py  basicNav.py  semNav.py
navegation/demo/: README.md  demo_complete_modular.py  demo_modular_navigation.py  demo_skills_complete.py  ejemplo.py  test_modules.py
navegation/test/: README.md  advTest.py  basicTest.py  semTest.py  test_modules.py
skills/: __init__.py  advNav.py  advanced_navigation.py  basicNav.py  essential_skills.py  semNav.py  semantic_navigation.py  skills.py
